--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "@headlessui/react": "^1.7.14",
     "@types/node": "18.15.10",
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
     "classnames": "^2.3.2",
+    "emailjs-com": "^3.2.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.16.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.0",
     "react-intersection-observer": "^9.5.2",
     "typescript": "5.0.2"
   },
