--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.0",
     "react-intersection-observer": "^9.5.2",
+    "react-loader-spinner": "^6.1.6",
     "typescript": "5.0.2"
   },
   "devDependencies": {
