--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
     "@headlessui/react": "^1.7.14",
+    "@softopus/eslint-config": "^1.0.2",
     "@types/node": "18.15.10",
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
@@ -18,6 +19,7 @@
     "emailjs-com": "^3.2.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "eslint-plugin-tailwindcss": "^3.14.3",
     "framer-motion": "^10.16.4",
     "next": "13.2.4",
     "react": "18.2.0",
