--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.15.10",
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
+    "@vercel/analytics": "^1.2.2",
     "classnames": "^2.3.2",
     "emailjs-com": "^3.2.0",
     "eslint": "8.36.0",
